adjusted few stuff related to complete btn ,did the input thing and changed the array concept and did it as array of object with status that change ,still stuck on filter btns will fix it later

--- a/style.css
+++ b/style.css
@@ -327,11 +327,20 @@ input::placeholder {
     hsl(280, 87%, 65%)
   );
 }
+.circle-completed:hover {
+  background-image: linear-gradient(
+    to right,
+    hsl(192, 100%, 67%),
+    hsl(280, 87%, 65%)
+  );
+  border: 1px solid var(--LightGrayishBlue);
+}
 
 .task-completed {
   text-decoration: line-through;
   color: var(--VeryDarkGrayishBlue);
 }
+
 .selected-filter {
   color: var(--BrightBlue);
 }
